--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -181,11 +181,19 @@ li:nth-child(5)
 	max-width: 30%
 
 .product-like
-	z-index: 3
 	background-image: url("../img/like.jpg")
 	width: 50px
 	height: 50px
 	margin-bottom: 39px
+
+.product-like-hidden
+	background-image: url("../img/heart.png")
+	width: 24px
+	height: 24px
+	border: 2px solid #e4e4e4
+	padding: 23px
+	background-repeat: no-repeat
+	background-position: center
 
 .product-name-nike
 	font-size: 25px
@@ -231,14 +239,14 @@ span
 .product-size-charts
 	display: flex
 
-.nice-select
+.product-size-charts .nice-select
 	width: 125px
 	height: 50px
 	line-height: 50px
 	text-transform: uppercase
 	border-radius: 0px
 
-.nice-select .option
+.product-size-charts .nice-select .option
 	min-height: 0px
 
 
@@ -258,8 +266,7 @@ span
 //
 // DESCRIPTION
 //
-.description
-	height: 100vh
+
 
 .description-content
 	display: flex
@@ -268,7 +275,7 @@ span
 	background-image: url("../img/desc.jpg")
 	width: 100%
 	max-width: 1280px
-	height: 660px
+	height: 100vh
 	background-size: cover
 	background-position: center
 
@@ -293,17 +300,20 @@ span
 //
 
 .product-description
+	background-image: url("../img/pair shoes.png")
 	background-color: #f5f5f5
+	width: 100%
+	max-width: 1280px
+	background-size: contain
+	background-repeat: no-repeat
+	background-position: center
+	margin: 0 auto
+	padding-bottom: 100px
+
 
 .product-story-description-content
 	display: flex
 	justify-content: space-between
-	background-image: url("../img/pair shoes.png")
-	width: 100%
-	max-width: 1280px
-	height: 660px
-	background-size: cover
-	background-position: center
 
 .product-story-content
 	max-width: 350px
@@ -400,6 +410,13 @@ span
 	justify-content: space-between
 	padding-left: 25px
 
+.product-description-charts .nice-select
+	width: 115px
+	height: 50px
+	text-transform: uppercase
+	line-height: 50px
+	border-radius: 0px
+
 .product-description-cart
 	width: 115px
 	height: 50px
@@ -476,35 +493,49 @@ span
 
 #navigation-menu-container
 	display: none
+	width: 100%
+	position: fixed
+	top: 50px
+	right: 0px
+	background: #000
+	opacity: 0.5
+	text-align: center
 
 #navigation-menu-container.visible
 	display: block
-	top: 40px
-	position: fixed
 
 #navigation-close
 	display: block
+	background-image: url("../img/close.png")
+	width: 17px
+	height: 17px
+	background-repeat: repeat
+	cursor: pointer
+
 
 ul.navigation-menu
-	margin-left: 0
-	padding-left: 0px
+	display: flex
+	flex-direction: column
+	list-style-type: none
+	padding: 0px
+	margin: 0px
+
 
 ul.navigation-menu a
-	display: block
-	width: 7em
-	padding: 10px
+	display: inline-block
+	width: 5em
+	padding: 17px 0px
+	text-align: center
 	font-size: 14px
-	background-color: #f4f4f4
-	border-top: 1px dashed #333
 	text-transform: uppercase
 	text-decoration: none
-	border-left: 5px solid #2299d5
-	color: #000
-	border-right: 1px dashed #333
+	background-color: #000
+	color: #fff
 
 
 ul.navigation-menu li
-	padding-left: 0px
+	display: inline-block
+	padding: 0px
 
 .navigation-menu a:hover
   color: #2299d5
@@ -513,13 +544,19 @@ ul.navigation-menu li
 
 
 	//SEARCH-ON//
+
+.search-on-content
+	padding: 100px 0px
+
 #search-on
 	display: none
 	position: fixed
-	top: 200px
+	top: 0px
 	z-index: 5
 	background-color: #e6edf1
 	width: 100%
+	height: 100%
+	overflow: scroll
 
 #search-on.visible
 	display: block
@@ -528,6 +565,7 @@ ul.navigation-menu li
 	display: flex
 	justify-content: space-between
 	margin-bottom: 50px
+	padding: 0px 10px
 
 .search-title
 	font-size: 18px
@@ -548,12 +586,14 @@ ul.navigation-menu li
 	position: relative
 	max-width: 1280px
 	width: 100%
-	border-bottom: 1px solid #e4e4e4
+	border-bottom: 3px solid #e4e4e4
 	min-height: 20px
+	margin-bottom: 30px
 
 .search-on-button input
 	font-size: 60px
 	color: #3da4d8
+	padding: 0px 10px
 
 input[type="text"]
 	border: none
@@ -561,6 +601,7 @@ input[type="text"]
 	max-width: 1280px
 	width: 100%
 	vertical-align: middle
+	background-color: #e6edf1
 
 input[type="search"]
 	position: absolute
@@ -572,6 +613,57 @@ input[type="search"]
 	background: url("../img/search-icon.png")
 	background-repeat: no-repeat
 	outline: none
+
+.footwear-title
+	font-size: 18px
+	text-transform: uppercase
+	margin-bottom: 30px
+	padding: 0px 10px
+
+.footwear-models-images
+	display: flex
+	flex-wrap: wrap
+
+.footwear-model
+	width: 25%
+	border: 6.5px solid transparent
+
+.footwear-model-information
+	position: absolute
+	right: 0px
+	left: 0px
+	bottom: 0px
+	padding: 30px 30px 30px 30px
+	line-height: 1.5
+	text-align: center
+
+.footwear-model-image
+	position: relative
+	width: 100%
+	height: 430px
+	background-size: cover
+	background-repeat: no-repeat
+	padding-top: 100%
+
+.footwear-model:nth-child(1) .footwear-model-image
+	background-image: url("../img/footwear-1.png")
+.footwear-model:nth-child(2) .footwear-model-image
+	background-image: url("../img/footwear-2.png")
+.footwear-model:nth-child(3) .footwear-model-image
+	background-image: url("../img/footwear-3.png")
+.footwear-model:nth-child(4) .footwear-model-image
+	background-image: url("../img/footwear-4.png")
+
+.footwear-model-name
+	font-size: 18px
+	text-transform: uppercase
+
+.footwear-model-description
+	font-size: 14px
+	font-family: "RobotoLight"
+
+.footwear-model-price
+	font-size: 18px
 
 	//INFORMATION//
 
@@ -592,7 +684,7 @@ input[type="search"]
 	display: block
 
 .information-content
-	padding: 35px 0 0 40px
+	padding: 35px 0 40px 40px
 
 .information-title
 	font-size: 35px
@@ -603,14 +695,16 @@ input[type="search"]
 	font-size: 14px
 	text-transform: uppercase
 
-#country
+.information-content .nice-select
 	font-size: 14px
 	border: none
 	border-bottom: 1px solid #e4e4e4
 	outline: none
 	width: 100%
 	max-width: 230px
-	padding: 14px 0px
+	margin-top: 3px
+	padding: 0px 0px
+	text-transform: uppercase
 
 .information-content input
 	border: none
@@ -637,7 +731,7 @@ input[type="note"]
 	font-size: 14px
 	text-transform: uppercase
 
-.delivers-mode
+#delivers-mode
 	outline: none
 	border: none
 	border-bottom: 1px solid #e4e4e4
@@ -738,11 +832,18 @@ button[class*=btn]
 
 .last-informations
 	display: flex
+	padding-bottom: 40px
 
 .consent-block
 	width: 14px
 	height: 14px
 	border: 1px solid #e5e5e5
+	margin-right: 12px
+
+.box-agree
+	background-image: url("../img/box-agree.jpg")
+	width: 14px
+	height: 14px
 	margin-right: 12px
 
 .consent-container
@@ -758,6 +859,12 @@ button[class*=btn]
 	font-size: 14px
 	font-family: "RobotoLight"
 	color: #4c4d4e
+
+.consent a
+	font-size: 14px
+	font-family: "RobotoLight"
+	color: #81c5e8
+	text-decoration: none
 
 .shipping-container, .subtotal-container
 	display: flex
@@ -818,8 +925,8 @@ button[class*=btn]
 
 #slick-login input[type="text"],#slick-login input[type="password"]
 	width: 100%
-	height: 40px
-	margin-top: 7px
+	height: 50px
+	margin-top: 10px
 	font-size: 14px
 	color: #444
 	outline: none
@@ -829,13 +936,13 @@ button[class*=btn]
 #slick-login input[type="text"]:focus,#slick-login input[type="password"]:focus
 	box-shadow: inset 0px 2px 0px #a7a7a7
 
-#slick-login input:first-child
+#slick-login input[type="text"]
 	margin-top: 0px
 
 #slick-login input[type="submit"]
 	width: 100%
 	height: 50px
-	margin-top: 7px
+	margin-top: 10px
 	color: #fff
 	font-size: 18px
 	outline: none
@@ -856,7 +963,15 @@ button[class*=btn]
 @media screen and (max-width:1300px)
 	.product-story-description-content
 		flex-direction: column
-		height: auto
+
+@media screen and (max-width:1280px)
+	.menu a:hover
+		color: #000
+
+	.menu a:hover::after
+		display: none
+		content: ""
+		border-bottom: 5px solid
 
 @media screen and (max-width:1150px)
 	.footwear-main-content img
@@ -921,6 +1036,16 @@ button[class*=btn]
 	#information
 		max-width: 100%
 
+	.footwear-model
+		width: 50%
+
+	.navigation-content
+		padding: 0px 20px 0px 0px
+
+	.footwear-model-information
+		top: 0px
+
+
 @media screen and (max-width:768px)
 
 	.product-like
@@ -938,9 +1063,10 @@ button[class*=btn]
 	.product-colors
 		font-size: 12px
 
-	.product-story-description-content
+	.product-description
 		background-image: url("../img/pair shoes.png")
 		background-image: none
+		padding-bottom: 50px
 
 	.product-story-description-content
 		align-items: center
@@ -961,9 +1087,6 @@ button[class*=btn]
 
 	.footwear-main-content
 		padding: 98px 0px 100px
-
-	.description
-		height: 79vh
 
 	.footwear-social-content
 		padding: 76px 0px 100px
@@ -1003,10 +1126,10 @@ button[class*=btn]
 	.product-size-charts
 		flex-direction: column
 
-	.nice-select, .product-cart
+	.product-size-charts .nice-select, .product-cart
 		width: 175px
 
-	.nice-select
+	.product-size-charts .nice-select
 		margin-bottom: 12px
 
 	.product-cart
@@ -1035,6 +1158,12 @@ button[class*=btn]
 	.search-on-button input
 		font-size: 40px
 
+	.footwear-model
+		width: 100%
+
+	ul.navigation-menu a
+		width: 4em
+		padding: 10px 0px
 
 
 @media screen and (max-width:411px)
@@ -1048,6 +1177,10 @@ button[class*=btn]
 
 	.search-on-button input
 		font-size: 30px
+
+	.navigation-content-right
+		width: 100%
+		justify-content: space-around
 
 
 @media screen and (max-width:320px)
